test/cli/test-validating-policy/policy-with-cm/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name:
    image: nginx
    volumeMounts:
      - name: udev
        mountPath: /data
  volumes:
  - name: udev
    emptyDir: {}
