test/cli/test-validating-policy/policy-with-cm/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-host-path
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  variables:
    - name: cm
      expression: >-
        resource.get("v1", "configmaps", object.metadata.namespace, "policy-cm")
  validations:
    - expression: >-
        object.metadata.name == variables.cm.data.name
