test/cli/test-validating-policy/policy-with-cm/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: kyverno-test.yaml
spec:
  resources:
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      namespace: default
      name: policy-cm
    data:
      name: good-pod
