test/cli/test-validating-policy/policy-with-cm/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- pod1.yaml
- pod2.yaml
context: context.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-host-path
  resources:
  - bad-pod
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-host-path
  resources:
  - good-pod
  result: pass
